--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
+      - name: setup jdk 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'corretto'
+          java-version: 17
+      - name: build the app
+        run: |
+          mvn clean
+          mvn -B package --file pom.xml
+          
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -23,7 +32,18 @@ jobs:
       #   uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       #   with:
       #     images: sonuit347/travelinv
-      - name: Build Docker image
-        run: docker build -t sonuit347/travelinv:latest . 
-      - name: Run a Docker image
-        run: docker run -p 3100:3100 sonuit347/travelinv:latest
+      - name: build the docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          dockerfile: Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/travelinv:latest
+          
+      - name: push the docker image to docker hub
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          dockerfile: Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/travelinv:latest
