--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           context: .
           dockerfile: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/travelinv:v.0.1
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/travelinv:v1.0.0
           
       - name: push the docker image to docker hub
         uses: docker/build-push-action@v4
@@ -46,4 +46,4 @@ jobs:
           context: .
           dockerfile: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/travelinv:v.0.1
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/travelinv:v1.0.0
