--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,13 +32,13 @@ jobs:
       #   uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       #   with:
       #     images: sonuit347/travelinv
-      # - name: build the docker image
-      #   uses: docker/build-push-action@v4
-      #   with:
-      #     context: .
-      #     dockerfile: Dockerfile
-      #     push: false
-      #     tags: ${{ secrets.DOCKER_HUB_USERNAME }}/travelinvserver:v1.0.0
+      - name: build the docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          dockerfile: Dockerfile
+          push: false
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/travelinvserver:v1.0.0
           
       - name: push the docker image to docker hub
         uses: docker/build-push-action@v4
@@ -46,4 +46,4 @@ jobs:
           context: .
           dockerfile: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/travelinvserver:v1.0.0
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/travelinvserver:v1.0.0
