--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,11 @@ jobs:
         with:
           version: 'latest'
           
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          credentials: ${{ secrets.AZURE_CREDENTIALS }}
+          
       - name: Configure kubectl
         run: az aks get-credentials --resource-group TravelInVServer --name travelinv --overwrite-existing
 
