--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,31 +25,32 @@ jobs:
           mvn clean
           mvn -B package --file pom.xml
           
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
       # - name: Extract metadata (tags, labels) for Docker
       #   id: meta
       #   uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       #   with:
       #     images: sonuit347/travelinv
-      - name: build the docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          dockerfile: Dockerfile
-          push: false
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/travelinvserver:v1.0.0
+      
+      # - name: build the docker image
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     context: .
+      #     dockerfile: Dockerfile
+      #     push: false
+      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/travelinvserver:v1.0.0
           
-      - name: push the docker image to docker hub
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          dockerfile: Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/travelinvserver:v1.0.0
+      # - name: push the docker image to docker hub
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     context: .
+      #     dockerfile: Dockerfile
+      #     push: true
+      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/travelinvserver:v1.0.0
 
       - name: Set up kubectl
         uses: azure/setup-kubectl@v1
@@ -64,8 +65,8 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
           enable-AzPSSession: true
           
-      - name: Configure kubectl
-        run: az aks get-credentials --resource-group TravelInVServer --name travelinv --overwrite-existing
+      # - name: Configure kubectl
+      #   run: az aks get-credentials --resource-group TravelInVServer --name travelinv --overwrite-existing
 
-      - name: Update Kubernetes deployment
-        run: kubectl rollout restart deployment/java-server
+      # - name: Update Kubernetes deployment
+      #   run: kubectl rollout restart deployment/java-server
